manifests/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: santa
spec:
  selector:
    app: santa
    role: storage
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: santa
spec:
  serviceName: mongo
  selector:
    matchLabels:
      app: santa
      role: storage
  replicas: 1
  template:
    metadata:
      labels:
        app: santa
        role: storage
    spec:
      containers:
        - name: mongo
          image: mongo:4.0.4
          command:
            - mongod
            - --auth
            - --port
            - '27017'
            - --bind_ip
            - '0.0.0.0'
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: dbdata
              mountPath: /data/db
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: mongo-data
