manifests/santa.yml
apiVersion: v1
kind: Service
metadata:
  name: santa-frontend
  namespace: santa
spec:
  selector:
    app: santa
    role: frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: santa
  namespace: santa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: santa
        role: frontend
    spec:
      containers:
      - name: santa
        image: quay.io/ktbartholomew/secret-santa:latest
        ports:
        - name: http
          containerPort: 3000
